<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:weightSum="3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:background="@color/light_red"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/background_image"
            app:civ_border_color="#FF000000" />

        <TextView
            android:id="@+id/user_menu_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/daniel"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/color_primary_dark"
            android:fontFamily="@font/poppins_semi_bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.2"
        android:orientation="vertical"
        android:background="@color/color_primary_dark">


        <TextView
            android:id="@+id/profile_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:paddingStart="@dimen/_20sdp"
            android:text="@string/profile"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/light_red"
            android:gravity="center_vertical"
            android:fontFamily="@font/poppins_thin"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@color/light_red"/>

        <TextView
            android:id="@+id/my_recipe_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:paddingStart="@dimen/_20sdp"
            android:text="@string/my_recipes"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/light_red"
            android:gravity="center_vertical"
            android:fontFamily="@font/poppins_thin"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@color/light_red"/>

        <TextView
            android:id="@+id/upload_recipe_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:paddingStart="@dimen/_20sdp"
            android:text="@string/upload_recipe"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/light_red"
            android:gravity="center_vertical"
            android:fontFamily="@font/poppins_thin"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@color/light_red"/>

        <TextView
            android:id="@+id/favorite_recipe_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:paddingStart="@dimen/_20sdp"
            android:text="@string/favorite_recipes"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/light_red"
            android:gravity="center_vertical"
            android:fontFamily="@font/poppins_thin"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@color/light_red"/>


        <TextView
            android:id="@+id/go_back_to_login_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:paddingStart="@dimen/_20sdp"
            android:text="@string/login"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/light_red"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:fontFamily="@font/poppins_thin"
            tools:ignore="RtlSymmetry" />

        <View
            android:id="@+id/login_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@color/light_red"/>


        <TextView
            android:id="@+id/logout_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:paddingStart="@dimen/_20sdp"
            android:text="@string/logout"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/light_red"
            android:gravity="center_vertical"
            android:fontFamily="@font/poppins_thin"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@color/light_red"/>

    </LinearLayout>


</LinearLayout>