<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_red"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.fragments.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/ic_dummy_user"
            app:civ_border_color="#FF000000" />

        <androidx.cardview.widget.CardView
            style="@style/CardStyleEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp">

            <EditText
                android:id="@+id/user_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_name"
                android:inputType="textCapSentences"
                android:maxLength="25" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardStyleEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <EditText
                android:id="@+id/user_email_Address"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="35" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardStyleEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <EditText
                android:id="@+id/user_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardStyleEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <EditText
                android:id="@+id/user_phone_number"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="15" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardStyleEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <com.isapanah.awesomespinner.AwesomeSpinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@color/edit_text_background"
                app:spinnerDirection="ltr"
                app:spinnerHint="Select Gender" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardStyleEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <EditText
                android:id="@+id/about_us_txt"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/about_us"
                android:inputType="textCapSentences"
                android:maxLines="3" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/login_button"
            style="@style/AppButtonStyle"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/sign_up"

            />
    </LinearLayout>

    </ScrollView>

</LinearLayout>