<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_red"
    android:orientation="vertical"
    tools:context=".view.fragments.UploadRecipeFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/title_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/upload_recipe"
            android:textColor="@color/color_primary_dark"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/upload_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/upload"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/color_primary_dark"
            android:fontFamily="@font/poppins_semi_bold"/>
    </RelativeLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardBackgroundColor="@color/light_red"
            android:elevation="@dimen/_5sdp"

            >
            <ImageView
                android:id="@+id/dish_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/add_dish_placeholder"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardStyleEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp">

            <EditText
                android:id="@+id/dish_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/dish_name"
                android:inputType="textCapSentences"
                android:maxLength="25" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardStyleEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <EditText
                android:id="@+id/dish_ingredient_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ingredients"
                android:background="@null"
                android:gravity="left"
                android:scrollbars="vertical"
                android:padding="@dimen/_7sdp"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:inputType="textMultiLine"
             />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            style="@style/CardStyleEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_25sdp">

            <EditText
                android:id="@+id/direction_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/directions"
                android:background="@null"
                android:gravity="left"
                android:scrollbars="vertical"
                android:padding="@dimen/_7sdp"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:inputType="textMultiLine"
                 />
        </androidx.cardview.widget.CardView>


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>