<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_red"
    android:orientation="vertical"
    tools:context=".view.fragments.EditProfileFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/profile"
            android:textColor="@color/color_primary_dark"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/save_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/save"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/color_primary_dark"
            android:fontFamily="@font/poppins_semi_bold"/>
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_view"
            tools:visibility="visible"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/background_image"
                    app:civ_border_color="#FF000000" />

            </LinearLayout>



            <androidx.cardview.widget.CardView
                style="@style/CardStyleEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp">

                <EditText
                    android:id="@+id/user_name"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/user_name"
                    android:inputType="textCapSentences"
                    android:maxLength="25" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardStyleEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <EditText
                    android:id="@+id/user_email_Address"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:maxLength="35" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                style="@style/CardStyleEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <EditText
                    android:id="@+id/user_phone_number"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:enabled="true"
                    android:maxLength="15" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardStyleEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <com.isapanah.awesomespinner.AwesomeSpinner
                    android:id="@+id/m_gender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@color/edit_text_background"
                    app:spinnerDirection="ltr"
                    app:spinnerHint="Select Gender" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                style="@style/CardStyleEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <EditText
                    android:id="@+id/about_us_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/about_us"
                    android:background="@null"
                    android:gravity="left"
                    android:padding="@dimen/_7sdp"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="3" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

        </LinearLayout>